# autocoder

./: .env.example  .gitignore  MANIFEST.in  README.md  conftest.py  files  find.sh  list_manifest_files.py  llm.py  llm.txt  pyproject.toml  release-script.sh  requirements.txt  setup.py
src/: __init__.py  claude_api_wrapper.py  context_builder.py  file_manager.py
src/autocoder/: __init__.py  autocoder.py  claude_api_wrapper.py  code_modifier.py  config.py  context_builder.py  error_handler.py  file_manager.py  langgraph_workflow.py  manifest_processor.py  state.py  task_interpreter.py  test_runner.py
src/autocoder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/autocoder/file_listing/: __init__.py  file_listing_node.py  file_saver.py  item_expander.py  item_filter.py  item_lister.py  llm_categorizer.py  user_interaction.py
src/autocoder/nodes/: analyze_file_listing_node.py  apply_modifications.py  build_context.py  check_autocoder_dir.py  error_handling_node.py  file_listing_node.py  generate_modifications.py  initialize_node.py  interpret_task.py  llm_analyze_node.py  run_tests.py  task_execution_node.py
src/autocoder/nodes/tools/: directory_checker.py
src/autocoder/tools/: project_analyzer.py
tests/: test_context_builder.py  test_file_listing_node.py
